...
    }
}

enum SavedMockData {
    static let savedArticles: [SavedArticle] = [
        SavedArticle(
            title: "New App Connects Local Farmers Directly With Consumers for Fresher Produce",
            author: "Brendan Cosgrove",
            publication: "NY Times",
            date: Calendar.current.date(byAdding: .day, value: -1, to: Date())!,
            dateString: "Yesterday",
            imageURLString: "https://images.unsplash.com/photo-1541185933-ef5d8ed016c2?q=80&w=800&auto=format&fit=crop"
        ),
...
            dateString: "2 days ago",
            imageURLString: "https://images.unsplash.com/photo-1579965342575-16428a7c8881?q=80&w=800&auto=format&fit=crop"
        ),
        SavedArticle(
            title: "South Korea’s Chip Giants Face Tightening Export Controls",
            author: "Michelle Ye Hee Lee",
            publication: "Financial Times",
            date: Calendar.current.date(byAdding: .day, value: -3, to: Date())!,
            dateString: "3 days ago",
            imageURLString: "https://images.unsplash.com/photo-1518770660439-4636190af475?q=80&w=800&auto=format&fit=crop"
        ),
        SavedArticle(
            title: "Tesla Bets Entire Valuation on Robotaxi Network Ahead of Event",
...
